# orep

./: .gitignore  README.md  setup.cfg
src/orep/: __init__.py  __main__.py  orep.py  utils.py
