[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[metadata]
name = orep
version = 1.0.0
author = Quentin Deslandes
author_email = qdeslandes@naccy.de
description = Create, update, and manage host credentials with 1Password
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qdeslandes/orep
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src